--- a/style.css
+++ b/style.css
@@ -1,18 +1,51 @@
-* {
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+body {
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    width: 600px;
+    margin:0px auto;
+    background: #e7c3c3;
 }
+
 .title {
     text-align: center;
-    background-color:rgb(240, 113, 113);
+    background-color:rgb(236, 114, 114);
     font-weight:900;
     color:rgb(40, 10, 10);
+    margin-top: 20px;
+    margin-bottom: 0px;
+    padding: 8px;
 }
+
 .sub-title {
     text-align:center;
     background-color:rgb(240, 113, 113);
     color:rgb(40, 10, 10);
+    margin: 0px 0px;
+    padding: 8px;
 }
+
 img {
-    height: 450px;
-    width: auto;
+    height: 400px;
+    margin: 0px auto;
+    display:block;
+    background: rgb(245, 216, 216);
+    padding: 20px;
+}
+
+p{
+    display: block;
+    margin-top: 0px;
+    margin-bottom: 10px;
+    padding: 8px;
+    background: rgb(245, 216, 216);
+}
+
+li{
+    margin: 0px;
+    padding: 5px;
+}
+
+.list{
+    background: rgb(245, 216, 216);
+    margin-top: 0px;
+    margin-bottom: 10px;
 }
